# bangla_news_digest

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  runner.py
.github/workflows/: ci.yaml
config/: default.yaml
config/celery/: celery.yaml
config/hydra/job_logging/: logger.yaml
config/logging/: logger.yaml
config/runtime/: dev.yaml  prod.yaml
config/runtime/db/: db_dev.yaml  db_prod.yaml
config/runtime/email/: smtp_dev.yaml  smtp_prod.yaml
config/sites/: bonik_barta.yaml  daily_star.yaml  janakantha.yaml  prothom_alo.yaml
config/webdriver/: chrome.yaml  firefox.yaml
resources/: fail_safe_vault.json  newsdigest_template.docx
src/: celery_app.py  pipelines.py
src/conf/: __init__.py  celery.py  db.py  default.py  email.py  logger.py  runtime.py  site_config.py  webdriver.py
src/db/: __init__.py  crud.py  models.py  session.py
src/news_scrapers/: __init__.py  base_scraper.py  bonik_barta_scraper.py  daily_star_scraper.py  janakantha_scraper.py  prothom_alo_scraper.py
src/utils/: __init__.py  logger_setup.py  other_utils.py  save_data.py  similarity_scorer.py  vault.py
src/webdriver_bridge/: __init__.py  local_driver.py  webdriver_adapter.py
